[package]
name = "red-panda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dialoguer = "0.11.0"
indicatif = "0.17.8"
open = "5.3.0"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
scraper = "0.20.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_urlencoded = "0.7.1"
tokio = { version = "1.39.2", features = ["full"] }
